@@ -1,8 +1,6 @@
 package com.ashu.one2one.service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -21,41 +19,36 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class EmployeeServiceImpl implements EmployeeService {
 
-	private final EmployeeRepository empRepo;
+    private final EmployeeRepository empRepo;
 
-	@Transactional
-	@Override
-	public EmployeeDto viewById(Long id) {
-		Employee employee = findById(id);
-		return mapModelToDto(employee);
-	}
+    @Transactional
+    @Override
+    public EmployeeDto viewById(Long id) {
+        Employee employee = findById(id);
+        return mapModelToDto(employee);
+    }
 
-	@Transactional
-	@Override
-	public List<EmployeeDto> getAll() {
-		return empRepo.findAll().stream().map(this::mapModelToDto).collect(Collectors.toList());
-	}
+    @Transactional
+    @Override
+    public List<EmployeeDto> getAll() {
+        return empRepo.findAll().stream().map(this::mapModelToDto).toList();
+    }
 
-	@Transactional
-	@Override
-	public EmployeeDto create(CreateEmployee createEmployee) {
-		Employee employee = empRepo.saveAndFlush(new Employee(createEmployee.getName()));
-		return mapModelToDto(employee);
-	}
+    @Transactional
+    @Override
+    public EmployeeDto create(CreateEmployee createEmployee) {
+        Employee employee = empRepo.saveAndFlush(new Employee(createEmployee.getName()));
+        return mapModelToDto(employee);
+    }
 
-	@Transactional
-	@Override
-	public Employee findById(Long id) {
-		Optional<Employee> isEmployee = empRepo.findById(id);
-		if (!isEmployee.isPresent()) {
-			log.info("Employee not found for requested id = ", id);
-			throw new EmployeeNotFoundException(id);
-		}
-		return isEmployee.get();
-	}
+    @Transactional
+    @Override
+    public Employee findById(Long id) {
+        return empRepo.findById(id).orElseThrow(() -> new EmployeeNotFoundException(id));
+    }
 
-	private EmployeeDto mapModelToDto(Employee employee) {
-		return new EmployeeDto(employee.getId(), employee.getName());
-	}
+    private EmployeeDto mapModelToDto(Employee employee) {
+        return new EmployeeDto(employee.getId(), employee.getName());
+    }
 
 }
